<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="90dp"
    android:paddingLeft="15dp"
    android:paddingRight="10dp"

    android:background="@drawable/layout_login">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AtsFood"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="#EF5C51"
        />

    <LinearLayout
        android:id="@+id/lnKhungDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="120dp">


        <EditText
            android:id="@+id/edtPhoneLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_phone_android_24"
            android:hint="@string/numberPhone"
            android:textColorHint="@color/colorWhite"
            android:inputType="phone"
            android:textColor="@color/colorWhite"

            android:textSize="30dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/colorWhite"
            android:id="@+id/edtPassLog"
            android:textColor="@color/teal_700"
            android:textSize="30sp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dangnhap"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:backgroundTint="#FF5722"

                android:textAllCaps="false"/>



        </LinearLayout>


        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/forgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:textColor="@color/colorBlack"
            android:textIsSelectable="true"
            android:textSize="18sp"
            android:layout_gravity="center"
            />


    </LinearLayout>

</RelativeLayout>