<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="36dp"
    android:paddingTop="30dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical"
    android:background="#E3B97B">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="Đăng Ký"
        android:layout_gravity="center"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="#D58207"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/numberPhone"
            android:id="@+id/edtPhoneRegister"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:inputType="phone"
            android:drawableLeft="@drawable/ic_baseline_phone_android_24"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/password"
            android:id="@+id/edtPassRegister"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/name"
            android:id="@+id/edtNameRegister"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_baseline_hoten_24"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/Address"
            android:id="@+id/edtAddressRegister"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_baseline_place_24"
            />


        <Button
            android:id="@+id/btnReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đăng ký"
            android:textColor="@color/colorWhite"
            android:textAllCaps="true"
            android:backgroundTint="#D58207"
            android:layout_gravity="center"
            android:textSize="25sp" />

    </LinearLayout>
</LinearLayout>